--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <title>Mi Página de Prueba</title>
-    <link rel="stylesheet" href="estilos.css">
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <title>Mi Página de Prueba</title>
+  <link rel="stylesheet" href="estilos.css" />
+</head>
+<body>
 
-  <body>
+  <header>
+    <img src="https://via.placeholder.com/150x50?text=Logo" alt="Logo Italmectec" class="logo" />
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="sobre.html">Sobre Nosotros</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
     <h1>¡Bienvenido a mi página de prueba!</h1>
-    <p>Esta es una página web creada para practicar HTML.</p>
+    <p>Esta es una página web creada para practicar HTML, CSS y más.</p>
 
     <h2>¿Qué estoy aprendiendo?</h2>
     <ul>
@@ -17,9 +29,37 @@
       <li>Cómo insertar imágenes y enlaces</li>
     </ul>
 
-    <h2>Contacto</h2>
-    <p>Mi correo es: <a href="mailto:ejemplo@correo.com">ejemplo@correo.com</a></p>
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <p>Mi correo es: <a href="mailto:ejemplo@correo.com">ejemplo@correo.com</a></p>
 
-    <img src="https://via.placeholder.com/350x150" alt="Imagen de prueba">
-  </body>
+      <form id="form-contacto">
+        <label for="nombre">Nombre:</label><br />
+        <input type="text" id="nombre" name="nombre" required /><br />
+
+        <label for="email">Email:</label><br />
+        <input type="email" id="email" name="email" required /><br />
+
+        <label for="mensaje">Mensaje:</label><br />
+        <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br />
+
+        <button type="submit">Enviar</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Italmectec. Todos los derechos reservados.</p>
+  </footer>
+
+  <script>
+    // Script para mostrar alerta al enviar el formulario (simulación)
+    document.getElementById('form-contacto').addEventListener('submit', function(event) {
+      event.preventDefault();
+      alert('¡Gracias por contactarnos, ' + this.nombre.value + '! Respondremos pronto.');
+      this.reset();
+    });
+  </script>
+
+</body>
 </html>
